@@ -1,3 +1,7 @@
+awesant (0.12) released at XXXX-XX-XX
+
+    * Implemented a failover mechanism for the redis output.
+
 awesant (0.11) released at 2012-08-30
 
     * Added option ssl_verify_mode to Input/Socket.pm and Output/Socket.pm.
